--- a/src/app/list-ticket-dernier/list-ticket-dernier.component.html
+++ b/src/app/list-ticket-dernier/list-ticket-dernier.component.html
@@ -1,5 +1,5 @@
 <div class="records table-responsive">
- <!-- <div class="record-header">
+    <!-- <div class="record-header">
      <div class="font-weight-bold">
          <span>Dernier Tickets</span>
      </div>
@@ -10,32 +10,31 @@
          </select>
      </div>
  </div> -->
- <div>	 <table width="100%">
-  <thead>
-      <tr>
-       <th><span class="col"></span> id</th>
-       <th><span class="col"></span> Title</th>
-          <th><span class="col"></span> Priority</th>
-          <th><span class="col"></span> Category</th>
-          <th><span class="col"></span> Nom d'expert</th>
-          <th><span class="col"></span> Date</th>
-          <th><span class="col"></span> Action</th>
-      </tr>
-  </thead>
-		
-	<tbody>
-		<tr *ngFor="let country of countries; index as i">
-			<th scope="row">{{ i + 1 }}</th>
-			<td>
-				{{ country.nameClient }}
-			</td>
-			<td>{{ country.priority }}</td>
-			<td>{{ country.category }}</td>
-   <td>{{ country.expert }}</td>
-			<td>{{ country.date }}</td>
-<td><app-bouton-open></app-bouton-open></td>
-		</tr>
-	</tbody>
-</table> 
-</div>
+    <div>
+        <table width="100%">
+            <thead>
+                <tr>
+                    <th><span class="col"></span> id</th>
+                    <th><span class="col"></span> Titre</th>
+                    <th><span class="col"></span> Priority</th>
+                    <th><span class="col"></span> Category</th>
+                    <th><span class="col"></span> Date</th>
+                    <th><span class="col"></span> Action</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td scope="row">{{ item2.id}}</td>
+                    <td>
+                        {{ item2.nom }}
+                    </td>
+                    <td>{{ item2.priority }}</td>
+                    <td>{{ item2.category }}</td>
+                    <td>{{ item2.date }}</td>
+                    <td><app-bouton-open></app-bouton-open></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
